@@ -1,2 +1,0 @@
-htmlfix will replace latin1 characters with html entities, or fix
-line endings in html files.
