@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2002/01/31 18:07:25 abs Exp $
-bin/htmlfix
-man/man1/htmlfix.1
