@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2017,v 1.3768 2017/09/12 04:01:08 adam Exp $
+$NetBSD: CHANGES-2017,v 1.3769 2017/09/12 05:51:29 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2017:
 
@@ -5295,3 +5295,4 @@ Changes to the packages collection and infrastructure in 2017:
 	Updated editors/emacs25 to 25.3 [ryoon 2017-09-12]
 	Updated editors/emacs25-nox11 to 25.3 [ryoon 2017-09-12]
 	Updated devel/py-hgtools to 6.5.2 [adam 2017-09-12]
+	Removed www/htmlfix [wiz 2017-09-12]
